repaired volunteers list style

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -10,14 +10,9 @@ Zusammenlebens echten und zeitgemäßen Informationszugang zu ermöglichen.<br/>
     +43699/17275937
   </p>
   <p>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <br>
     23degree ist das erste Vorhaben von Feel the World.
-    <br>
-    <br>
     <br>
   </p>
 </div>
@@ -56,7 +51,7 @@ Zusammenlebens echten und zeitgemäßen Informationszugang zu ermöglichen.<br/>
 </div>
 <div class="block center">
   <h2 style="margin-bottom:0px;margin-top:3em">Die UnterstützerInnen</h2>
-  <div layout-sm="column" layout-md="column" layout="row" >
+  <div layout="row" >
     <div flex-sm="100" flex-md="100" flex="50">
       <md-list>
         <md-list-item class="md-3-line fx-fade-down fx-easing-bounce" ng-repeat="item in about.support | limitTo:6">
