--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,19 +1,48 @@
-<div class="home">
-  <div class="logo">
-    <img style="max-width:125px" src="/assets/images/23_logo.png" />
-  </div>
-  <div class="block">
-  <ul>
-    <li>Wo herrscht welcher Krieg?</li>
-<li>Wo ereignen sich humanitäre Katastrophen?</li>
-<li>Wer tut eigentlich etwas gegen Umweltverschmutzung?</li>
-<li>Wo ist die Pressefreiheit gefährdet?</li>
-<li>Wie sieht es vor Ort um gefährdete Arten aus?</li>
+<div class="home" layout="column" layout-align="center center">
+  <div id="text" layout="column" layout-align="center center">
 
-</ul>
-</div>
-<div ui-view="more" class="slide"></div>
-<div layout="row" layout-align="center center" ng-if="home.current != 'home.more'">
-<md-button class="more-button" ui-sref="home.more">mehr erfahren </md-button>
-</div>
+        <div class="spacer" style="margin-top:0.5em"></div>
+        	<div class="big">	coming soon...</div>
+
+      		<div class="spacer" style="margin-top:0.5em"></div>
+        <!--<div title="Newsletter abonnieren" layout="row" layout-align="center center" ng-mouseover="icon = 'drafts'" ng-mouseleave="icon = 'mail'">
+            <a ui-sref="newsletter" >
+              <ng-md-icon size="50"  icon="{{icon || 'mail'}}"  options='{"rotation": "none","duration": 375}'></ng-md-icon>
+            </a>
+          </div>-->
+          <div class="block">
+            <p class="slide" ng-if="mailchimp.result != 'success'">Stay tuned mit 23degree. Hier können Sie sich zu unserem Newsletter anmelden. So erhalten Sie regelmässig Informationen darüber, was sich bei 23degree tut, bis zum launch der Site im Frühjahr 2016.</p>
+            <form name="MailchimpSubscriptionForm" >
+              <div class="anim-left" ng-hide="mailchimp.result === 'success'">
+                <input class="hidden" ng-init="mailchimp.username='wefeeltheword'" ng-model="mailchimp.username" type="hidden">
+                <input class="hidden" ng-init="mailchimp.dc='us10'" ng-model="mailchimp.dc" type="hidden">
+                <input class="hidden" ng-init="mailchimp.u='50718cc74e5de3a3a18263ac1'" ng-model="mailchimp.u" type="hidden">
+                <input class="hidden" ng-init="mailchimp.id='d8ca207c76'" ng-model="mailchimp.id" type="hidden">
+
+                <!--<div class="form-group form-styled">
+                  <input class="form-control" name="EMAIL" ng-model="mailchimp.EMAIL" placeholder="Subscribe to newsletter..." required type="email">
+                </div>-->
+                <md-input-container>
+                  <label>E-Mail-Adresse</label>
+                  <input name="description" type="email" ng-model="mailchimp.EMAIL" required>
+                </md-input-container>
+                <md-button analytics-category="Mailchimp" analytics-event="Register" analytics-on  ng-click="addSubscription(mailchimp)" ng-disabled="MailchimpSubscriptionForm.$invalid" type="submit">Newsletter abonnieren</md-button>
+              </div>
+
+              <!-- Show error message if MailChimp unsuccessfully added the email to the list. -->
+              <div class="anim-left colored text-center slide" ng-cloak ng-if="mailchimp.result === 'error'" style="margin: 1em;">
+                <span ng-bind-html="mailchimp.errorMessage"></span>
+              </div>
+
+              <!-- Show success message if MailChimp returned successfully. -->
+              <div class="anim-left colored text-center slide" ng-cloak ng-if="mailchimp.result === 'success'" style="margin:0 1em;">
+                <span ng-bind-html="mailchimp.successMessage"></span>
+              </div>
+            </form>
+          </div>
+      		<div class="spacer" style="margin-bottom:0.5em"></div>
+      		<small style="font-size:1.4em;"><a href="mailto:info@wefeeltheworld.org">info@wefeeltheworld.org</a></small>
+      		<div class="spacer" style="margin-top:0.5em;margin-bottom:0.5em"></div>
+      		<small>&copy; 2015</small>
+  </div>
 </div>
